# qrlocator

./: .gitignore  LICENSE  README.md  calibration_results.txt  pyproject.toml
calibration/: calibration_settings.py
qr_location_calculator/: calibration_settings.py  qr_calc_class.py  qr_calculator.py  qrcalibrator.py  qrlocator.py
src/qrlocator/: QRlocator.py
