[build-system]
requires = ["hatchling", cv2, math, matplotlib, pyzbar"]
build-backend = "hatchling.build"

[project]
name = "QRlocator_AlexSkillman10"
version = "0.9.0"
authors = [
  { name="Alex Skillman", email="alexskillman10@gmail.com" },
]
description = "A package for getting the location of QRcodes from images"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AlexSkillman10/qrlocator"
"Bug Tracker" = "https://github.com/AlexSkillman10/qrlocator/issues"
